--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
     
 <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2LB3K35P5J"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9Y72RJJZQ6"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-2LB3K35P5J');
+  gtag('config', 'G-9Y72RJJZQ6');
 </script>
 <!-- Analytics END -->
     
