--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,14 @@
 
     
 <!-- Analytics -->
- 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9Y72RJJZQ6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9Y72RJJZQ6');
+</script> 
 <!-- Analytics END -->
     
 </head>
