--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<li>
 								<a href="index.html">Accueil</a>
 								<!--</li> <li> </li> <li> -correction balises vides -->
-								<a href="page2.html">page2 &gt;</a>
+								<a href="contacts-webdesign.html" title="Formulaire de contact">Nous contacter...</a>
 							</li>
 						</ul>
 					</div>
@@ -86,7 +86,7 @@
 							La chouette agence.
 						</h1>
 						<div class="text-center">
-							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+							<a href="contacts-webdesign.html" title="Formulaire de contact" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
 								id="cta-hero">Contact</a>
 						</div>
 					</div>
@@ -169,7 +169,7 @@
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 							qui seront facilement trouvable sur les moteurs de recherche. <a class="ltc-white bold-link"
-								href="page2.html">Contactez notre équipe</a>
+								href="contacts-webdesign.html">Contactez notre équipe</a>
 						</p>
 					</div>
 				</div>
@@ -252,7 +252,7 @@
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<div class="col-sm-12 text-center">
-						<a href="page2.html"
+						<a href="contacts-webdesign.html" title="Formulaire de contact"
 							class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 					</div>
 				</div>
