--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="keywords"
 		content="site web, agence design lyon, front end développeur, entreprise lyon,développeur web,entreprise développement web,création site web,chouette agence,web design">
-	<meta name="description" content="Entreprise de design et développement site web à Lyon.Création de site internet.">
+	<meta name="description" content="Entreprise de design et développement site web à Lyon.Création de site internet.Une équipe d'experts pour fa-underline assistance et aide au réferecement.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
@@ -20,7 +20,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-	<title>Chouette agence de développement web</title>
+	<title>Chouette agence - Entreprise de développement web à lyon.</title>
 
 
 	<!-- Google Analytics -->
@@ -46,14 +46,8 @@
 
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web,
-							web design, illustrations, design de site web, site web, web, internet, site internet, site
-						</div>
 						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
 								alt="paris web design logo agence web meilleure agence" height="40" /></a>
-						<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web,
-							web design, illustrations, design de site web, site web, web, internet, site internet, site
-						</div>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
@@ -64,7 +58,6 @@
 						<ul class="site-navigation nav navbar-nav">
 							<li>
 								<a href="index.html">Accueil</a>
-								<!--</li> <li> </li> <li> -correction balises vides -->
 								<a href="contacts-webdesign.html" title="Formulaire de contact">Nous contacter...</a>
 							</li>
 						</ul>
@@ -108,37 +101,37 @@
 						<div class="text-center">
 							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">
+						<h1 class="mg-md text-center">
 							Web design
-						</h3>
-						<p class="text-center ">
+						</h1>
+						<h2 class="text-center ">
 							Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de
 							zéro, laissez-nous vous réaliser un design dont vous serez fier.
-						</p>
+						</h2>
 					</div>
 					<div class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">
+						<h1 class="mg-md text-center">
 							&nbsp;Stratégie
-						</h3>
-						<p class="text-center ">
+						</h1>
+						<h2 class="text-center ">
 							Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre
 							vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
-						</p>
+						</h2>
 					</div>
 					<div class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">
+						<h1 class="mg-md text-center">
 							Illustrations
-						</h3>
-						<p class="text-center ">
+						</h1>
+						<h2 class="text-center ">
 							Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de
 							graphistes talentueux pour donner à vos pages une touche finale d'élégance.
-						</p>
+						</h2>
 					</div>
 				</div>
 				<div class="row voffset-lg voffset">
@@ -158,19 +151,19 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace black-background">
 					<div class="col-sm-12">
-						<h2 class="mg-md text-center tc-white">
+						<h1 class="mg-md text-center tc-white">
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
 							le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients
 							.
-						</h2>
-						<p class="text-center white">
+						</h1>
+						<h2 class="text-center white">
 							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles
 							aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 							qui seront facilement trouvable sur les moteurs de recherche. <a class="ltc-white bold-link"
 								href="contacts-webdesign.html">Contactez notre équipe</a>
-						</p>
+						</h2>
 					</div>
 				</div>
 			</div>
@@ -265,9 +258,9 @@
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center white">
+						<h1 class="text-center white">
 							La chouette agence - Agence web basée à Lyon.<br>
-						</p>
+						</h1>
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
@@ -290,9 +283,6 @@
 											class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
-							<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design,
-								illustrations, design de site web, site web, web, internet, site internet, site</div>
-						</div>
 						<!--
 						<div class="row">
 							<div class="col-sm-4">
