--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 							Web design
 						</h1>
 						<h2 class="text-center ">
-							Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de
+							Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de
 							zéro, laissez-nous vous réaliser un design dont vous serez fier.
 						</h2>
 					</div>
