--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="keywords"
 		content="site web, agence design lyon, front end développeur, entreprise lyon,développeur web,entreprise développement web,création site web,chouette agence,web design">
-	<meta name="description" content="Entreprise de design et développement site web à Lyon.Création de site internet.Une équipe d'experts pour fa-underline assistance et aide au réferecement.">
+	<meta name="description"
+		content="Entreprise de design et développement site web à Lyon.Création de site internet.Une équipe d'experts pour fa-underline assistance et aide au réferecement.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
@@ -79,7 +80,8 @@
 							La chouette agence.
 						</h1>
 						<div class="text-center">
-							<a href="contacts-webdesign.html" title="Formulaire de contact" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+							<a href="contacts-webdesign.html" title="Formulaire de contact"
+								class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
 								id="cta-hero">Contact</a>
 						</div>
 					</div>
@@ -283,7 +285,7 @@
 											class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
-						<!--
+							
 						<div class="row">
 							<div class="col-sm-4">
 								Partenaires
@@ -323,17 +325,14 @@
 								</ul>
 							</div>
 						</div>
-						-->
+						
+						</div>
 					</div>
 				</div>
 			</div>
+			<!-- Footer - bloc-8 END -->
 		</div>
-		<!-- Footer - bloc-8 END -->
-
-	</div>
-	<!-- Principal conteneur END -->
-
-
+		<!-- Principal conteneur END -->
 </body>
 
 </html>
