--- a/Contacts-webdesign.html
+++ b/Contacts-webdesign.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="keywords" content="">
-	<meta name="description" content="Créer, développer des pages web.Adapter les besoins de l'entreprise avec le web.">
+	<meta name="description"
+		content="Entreprise de design et développement site web à Lyon.Création de site internet.Une équipe d'experts pour vous assister et vous aider à votre réferecement.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -19,7 +20,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-	<title>contacts webdesign</title>
+	<title>Chouette agence - Entreprise de développement web à lyon.</title>
 
 
 	<!-- Analytics -->
