--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="keywords"
 		content="site web, agence design lyon, front end développeur, entreprise lyon,développeur web,entreprise développement web,création site web,chouette agence,web design">
-	<meta name="description"
-		content="Entreprise de design et développement site web à Lyon.Création de site internet.Une équipe d'experts pour fa-underline assistance et aide au réferecement.">
+		<meta name="description"
+		content="Entreprise de design et développement site web à Lyon.Création de site internet.Une équipe d'experts pour vous assister et vous aider à votre réferecement.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
