--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 							qui seront facilement trouvable sur les moteurs de recherche. <a class="ltc-white bold-link"
-								href="contacts-webdesign.html">Contactez notre équipe</a>
+								href="contacts-webdesign.html" title="Formulaire de contact">Contactez notre équipe</a>
 						</h2>
 					</div>
 				</div>
