--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<ul class="site-navigation nav navbar-nav">
 							<li>
 								<a href="index.html">Accueil</a>
-								<a href="contactswebdesign.html" title="Formulaire de contact">Nous contacter...</a>
+								<a href="contacts-webdesign.html" title="Formulaire de contact">Nous contacter...</a>
 							</li>
 						</ul>
 					</div>
