--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 		<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 			<div class="container bloc-lg">
 				<div class="row">
-					<div class="col-sm-12 text-center">
+					<div class="text-center">
 						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
 					</div>
 				</div>
@@ -246,7 +246,7 @@
 					<h2 class="mg-md text-center tc-white">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
-					<div class="col-sm-12 text-center">
+					<div class="text-center">
 						<a href="contacts-webdesign.html" title="Formulaire de contact"
 							class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 					</div>
@@ -259,7 +259,7 @@
 		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
 				<div class="row">
-					<div class="col-sm-12">
+					<!-- <div class="col-sm-12"> -->
 						<h1 class="text-center white">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</h1>
@@ -327,7 +327,7 @@
 							</div>
 							-->
 						</div>
-					</div>
+					<!-- </div> -->
 				</div>
 			</div> 
 			<!-- Footer - bloc-8 END -->
