--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		<div class="bloc bgc-white l-bloc" id="bloc-2-services">
 			<div class="container bloc-md">
 				<div class="row">
-					<div class="col-sm-12 text-center">
+					<div class="text-center">
 						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
 					</div>
 				</div>
