--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
 						</h1>
 						<div class="text-center">
 							<a href="contacts-webdesign.html" title="Formulaire de contact"
-								class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
-								id="cta-hero">Contact</a>
+								class="btn btn-lg btn-clean btn-rd btn-atomic-tangerine	cta-hero-btn">Contact</a>
 						</div>
 					</div>
 				</div>
@@ -248,7 +247,7 @@
 					</h2>
 					<div class="text-center">
 						<a href="contacts-webdesign.html" title="Formulaire de contact"
-							class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+							class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero-btn">Contact</a>
 					</div>
 				</div>
 			</div>
