--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -259,31 +259,30 @@
 			<div class="container bloc-sm">
 				<div class="row">
 					<!-- <div class="col-sm-12"> -->
-						<h1 class="text-center white">
+						<h2 class="text-center black">
 							La chouette agence - Agence web basée à Lyon.<br>
-						</h1>
+						</h2>
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-twitter icon-md" style ="color: #000000;"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-facebook icon-md" style ="color: #000000;"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md" style ="color: #000000;"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span
-											class="fa fa-instagram icon-md"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-instagram icon-md" style ="color: #000000;"></span></a>
 								</div>
-							</div>
+							</di>
 							<!--
 							<div class="row">
 								<div class="col-sm-4">
