--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -60,7 +60,7 @@
 								<a href="index.html">Accueil</a>
 							</li>
 							<li>
-								<a href="page2.html">page2 &gt;</a>
+								<a href="#">Nous contacter...</a>
 							</li>
 						</ul>
 					</div>
