Test sans parametres analytics

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
 
 
-	<!-- Google Analytics -->
+	<!-- Google Analytics 
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9Y72RJJZQ6"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -35,7 +35,7 @@
 
 		gtag('config', 'G-9Y72RJJZQ6');
 	</script>
-	<!-- Analytics END -->
+	Analytics END -->
 
 </head>
 
