--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -7,8 +7,8 @@
 	<meta name="description"
 		content="Entreprise de design et développement site web à Lyon.Création de site internet.Une équipe d'experts pour vous assister et vous aider à votre réferecement.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta data-react-helmet="true" name="robots" content="index">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
