--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<meta name="description"
 		content="Entreprise de design et développement site web à Lyon.Création de site internet.Une équipe d'experts pour vous assister et vous aider à votre réferecement.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<link rel="canonial" href="https://pascald18.github.io/P4_02_code_source/index.html">
+	<code><meta name="robots" content="index, follow"></code>
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
