--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="keywords"
 		content="site web, agence design lyon, front end développeur, entreprise lyon,développeur web,entreprise développement web,création site web,chouette agence,web design">
-		<meta name="description"
+	<meta name="description"
 		content="Entreprise de design et développement site web à Lyon.Création de site internet.Une équipe d'experts pour vous assister et vous aider à votre réferecement.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="canonial" href="https://pascald18.github.io/P4_02_code_source/index.html">
@@ -156,19 +156,19 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace black-background">
 					<div class="col-sm-12">
-						<h1 class="mg-md text-center tc-white">
+						<h2 class="mg-md text-center tc-white">
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
 							le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients
 							.
-						</h1>
-						<h2 class="text-center white">
+						</h2>
+						<h3 class="text-center white-2">
 							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles
 							aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
-							qui seront facilement trouvable sur les moteurs de recherche. <a class="ltc-white bold-link"
-								href="contacts-webdesign.html" title="Formulaire de contact">Contactez notre équipe</a>
-						</h2>
+							qui seront facilement trouvable sur les moteurs de recherche.<br>
+						 <a class="ltc-white bold-link" href="contacts-webdesign.html" title="Formulaire de contact">
+							Contactez notre équipe</a></h3>
 					</div>
 				</div>
 			</div>
@@ -193,9 +193,9 @@
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
 						</h3>
-						<p class="text-center">
+						<h4 class="text-center">
 							Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
-						</p>
+						</h4>
 					</div>
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
@@ -205,9 +205,9 @@
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
 						</h3>
-						<p class="text-center">
+						<h4 class="text-center">
 							Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
-						</p>
+						</h4>
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
@@ -219,10 +219,10 @@
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
 						</h3>
-						<p class="text-center">
+						<h4 class="text-center">
 							Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les
 							articles de ce voyageur.
-						</p>
+						</h4>
 					</div>
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
@@ -232,10 +232,10 @@
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
-						<p class="text-center">
+						<h4 class="text-center">
 							Nous avons travaillé avec cette agence pour créer un site internet permettant la
 							présentation détaillée de leurs prestations.
-						</p>
+						</h4>
 					</div>
 				</div>
 			</div>
@@ -263,29 +263,33 @@
 			<div class="container bloc-sm">
 				<div class="row">
 					<!-- <div class="col-sm-12"> -->
-						<h2 class="text-center black">
-							La chouette agence - Agence web basée à Lyon.<br>
-						</h2>
-						<div class="row row-no-gutters social">
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md" style ="color: #000000;"></span></a>
-								</div>
+					<h2 class="text-center black">
+						La chouette agence - Agence web basée à Lyon.<br>
+					</h2>
+					<div class="row row-no-gutters social">
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html"><span class="fa fa-twitter icon-md"
+										style="color: #000000;"></span></a>
 							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md" style ="color: #000000;"></span></a>
-								</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html"><span class="fa fa-facebook icon-md"
+										style="color: #000000;"></span></a>
 							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md" style ="color: #000000;"></span></a>
-								</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"
+										style="color: #000000;"></span></a>
 							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-instagram icon-md" style ="color: #000000;"></span></a>
-								</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html"><span class="fa fa-instagram icon-md"
+										style="color: #000000;"></span></a>
+							</div>
 							</di>
 							<!--
 							<div class="row">
@@ -329,13 +333,13 @@
 							</div>
 							-->
 						</div>
-					<!-- </div> -->
+						<!-- </div> -->
+					</div>
 				</div>
-			</div> 
-			<!-- Footer - bloc-8 END -->
+				<!-- Footer - bloc-8 END -->
+			</div>
+			<!-- Principal conteneur END -->
 		</div>
-		<!-- Principal conteneur END -->
-	</div>
 </body>
 
 </html>
