--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -78,13 +78,14 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12">
-						<h1 class="text-center hero-bloc-text tc-white">
+						<h1 class="text-center hero-bloc-text tc-pink">
 							Parlons web design !
 						</h1>
-						<p class="text-center mg-lg tc-white tight-width-whitespace">
-							Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
+						<h4 class="text-center mg-lg white-2">
+							<br>
+							Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br><br>
 							Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-						</p>
+						</h4>
 					</div>
 				</div>
 			</div>
@@ -100,25 +101,25 @@
 							data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 							<div class="form-group">
 								<label>
-									Nom
+									<h4>Nom</h4>
 								</label>
 								<input id="name" class="form-control" required />
 							</div>
 							<div class="form-group">
 								<label>
-									Adresse email
+									<h4>Adresse email</h4>
 								</label>
 								<input id="email" class="form-control" type="email" required />
 							</div>
 							<div class="form-group">
 								<label>
-									Comment nous avez-vous connu ?
+									<h4>Comment nous avez-vous connu ?</h4>
 								</label>
 								<input class="form-control" type="email" required id="input_504" />
 							</div>
 							<div class="form-group">
 								<label>
-									Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+									<h4>Brief de votre projet (Ajoutez autant de détails que nécessaire)</h4><br>
 								</label><textarea id="message" class="form-control" rows="4" cols="50"
 									required></textarea>
 							</div>
@@ -129,10 +130,10 @@
 						</form>
 					</div>
 					<div class="col-sm-6">
-						<p>
+						<h4>
 							contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi
 							au vendredi<br>
-						</p>
+						</h4>
 					</div>
 				</div>
 			</div>
@@ -150,9 +151,9 @@
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center white">
+						<h4 class="text-center tc-pink">
 							La chouette agence - Agence web basée à Lyon.<br>
-						</p>
+						</h4>
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
