--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<nav class="navbar row">
 					<div class="navbar-header">
 						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
-								alt="paris web design logo agence web meilleure agence" height="40" /></a>
+								alt="logo agence" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
@@ -79,7 +79,7 @@
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
-							alt="La chouette agence, agence web paris, création logo paris" />
+							alt="Logo 2 La chouette agence" />
 						<h1 class="text-center hero-bloc-text tc-white ">
 							La chouette agence.
 						</h1>
@@ -97,9 +97,8 @@
 		<div class="bloc bgc-white l-bloc" id="bloc-2-services">
 			<div class="container bloc-md">
 				<div class="row">
-					<div class="text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
-					</div>
+						<h2 class="text-center">La chouette agence est une entreprise de web design qui aide à devenir attractif et visible sur internet.</h2>
+						<!-- <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" /> -->
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
 					<div class="col-sm-4">
@@ -166,7 +165,7 @@
 							aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
-							qui seront facilement trouvable sur les moteurs de recherche.<br>
+							qui seront facilement trouvable sur les moteurs de recherche.<br><br>
 						 <a class="ltc-white bold-link" href="contacts-webdesign.html" title="Formulaire de contact">
 							Contactez notre équipe</a></h3>
 					</div>
@@ -188,7 +187,7 @@
 						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 								src="img/1.jpg"
-								alt="paris web design logo agence web meilleure agence et refonte site web journal"
+								alt="refonte site journal local"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
@@ -201,7 +200,7 @@
 						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="img/2.jpg" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+								alt="site web pour photographes" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
 						</h3>
@@ -215,7 +214,7 @@
 						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 								src="img/3.bmp" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
+								alt="Site web pour voyageur" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
 						</h3>
@@ -228,7 +227,7 @@
 						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 								src="img/4.bmp" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+								alt="Site web pour agence de mariage" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
