--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="keywords"
 		content="site web, agence design lyon, front end développeur, entreprise lyon,développeur web,entreprise développement web,création site web,chouette agence,web design">
 	<meta name="description"
-		content="Entreprise de design et développement site web à Lyon.Création de site internet.Une équipe d'experts pour vous assister et vous aider à votre réferecement.">
+		content="Entreprise de design et développement site web à Lyon.Une équipe d'experts pour vous assister en stratégie et illustrations pour vous aider à votre réferecement.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="canonial" href="https://pascald18.github.io/P4_02_code_source/index.html">
 	<code><meta name="robots" content="index, follow"></code>
@@ -183,7 +183,10 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="text-center">
+						<h2>Nous travaillons avec beaucoup de clients, voici nos réalisations</h2>
+						<!--
 						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+						-->
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
