--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -10,7 +10,7 @@
 	<link rel="canonial" href="https://pascald18.github.io/P4_02_code_source/index.html">
 	<code><meta name="robots" content="index, follow"></code>
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
