--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="canonial" href="https://pascald18.github.io/P4_02_code_source/index.html">
 	<code><meta name="robots" content="index, follow"></code>
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -257,11 +257,9 @@
 					<h2 class="mg-md text-center-5 tc-white-5">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
-					<h3 class="text-center">
+					<h3 class="col-sm-12 text-center">
 						<a href="contacts-webdesign.html" title="Formulaire de contact"
-						class="btn btn-lg btn-clean btn-rd btn-atomic-tangerine	cta-hero-btn">Contact</a>
-						<!-- <a class="btn btn-lg btn-clean btn-rd btn-atomic-tangerine cta-hero-btn" 
-							href="contacts-webdesign.html" title="Formulaire de contact">Contact</a> -->
+							class="btn btn-lg btn-clean btn-rd btn-atomic-tangerine	cta-hero-btn">Contact</a>
 					</h3>
 				</div>
 			</div>
@@ -300,7 +298,6 @@
 								<a class="social" href="index.html"><span class="fa fa-instagram icon-md"
 										style="color: #000000;"></span></a>
 							</div>
-							</di>
 							<!--
 							<div class="row">
 								<div class="col-sm-4">
