--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 					<h2 class="mg-md text-center-5 tc-white-5">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
-					<h3 class="col-sm-12 text-center">
+					<h3 class="text-center">
 						<a href="contacts-webdesign.html" title="Formulaire de contact"
 							class="btn btn-lg btn-clean btn-rd btn-atomic-tangerine	cta-hero-btn">Contact</a>
 					</h3>
