--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -61,7 +61,7 @@
 					<!-- <div class="collapse navbar-collapse navbar-1 special-dropdown-nav"> -->
 					<ul class="site-navigation nav navbar-nav black-20">
 						<li>
-							<a href="index.html">Accueil</a>
+							<a href="index.html" title="Formulaire de contact">Accueil</a>
 							<a href="#">Nous contacter...</a>
 						</li>
 					</ul>
