--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -126,7 +126,7 @@
 						</form>
 					</div>
 					<div class="col-sm-6">
-						<h4>
+						<h4 class="col-sm-6-large">
 							contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi
 							au vendredi<br>
 						</h4>
